Update bug fixing of Text widget cursor Update bug fixing of Table widget on IE.

--- a/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Text.css
+++ b/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Text.css
@@ -8,6 +8,7 @@
 	font-family:Tahoma, Arial, sans-serif;
 	font-size:8pt;
 	/*white-space:nowrap;*/
+	overflow:hidden;
 }
 .text-default textarea {
 	border-style:none;
